syntax = "proto3";

package com.android.fastdeploy;

option java_package = "com.android.fastdeploy";
option java_outer_classname = "ApkEntryProto";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME;

message APKDump {
    string name = 1;
    bytes cd = 2;
    bytes signature = 3;
    string absolute_path = 4;
}

message APKEntry {
    int64 crc32 = 1;
    string fileName = 2;
    int64 dataOffset = 3;
    int64 compressedSize = 4;
}

message APKMetaData {
    string absolute_path = 1;
    repeated APKEntry entries = 2;
}
